solved some Alignment problem.

--- a/src/css/css-responsive.css
+++ b/src/css/css-responsive.css
@@ -73,7 +73,7 @@
 
   ._section_1_rn15j_1 {
     .image-container {
-      margin-top: 6rem;
+      margin-top: 8rem;
     }
   }
 }
