--- a/src/css/index.css
+++ b/src/css/index.css
@@ -62,7 +62,7 @@ html {
   padding: 8rem !important;
 }
 .mb-55 {
-  margin-bottom: 50rem;
+  margin-bottom: 55rem;
 }
 
 .gap-8 {
